--- a/src/components/ArticleDetail/styles.module.css
+++ b/src/components/ArticleDetail/styles.module.css
@@ -1,16 +1,26 @@
 .detail__box {
-  width: 555px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .detail__img {
+  width: 100%;
   height: 285px;
   border-radius: 16px;
+}
+
+.detail__text {
+  width: 100%;
 }
 
 .detail__title {
   margin-top: 30px;
   font-size: 36px;
   font-weight: 500;
+  text-align: left;
 }
 
 .detail__summary {
